testdata/zkc/invalid/type_invalid_05.zkc
//error:3:14-18:cannot assign type alias
type bool = u4
const R:u4 = bool